--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+/* Navigation */
+@import './nav.css';
+
+/* Hero Section */
+@import './heroSection.css';
+
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: normal;
@@ -16,11 +22,6 @@ h1, h2 {
 
 h3 {
     text-transform: uppercase;
-}
-
-.section-one h2 {
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
 }
 
 .section-two p {
