--- a/styles/main.css
+++ b/styles/main.css
@@ -17,7 +17,7 @@ body {
 h1, h2 {
     font-family: 'Playfair', serif;
     font-weight: 500;
-    font-size: 86px;
+    font-size: 5.4rem;
 }
 
 h3 {
