--- a/styles/biographySection.css
+++ b/styles/biographySection.css
@@ -9,7 +9,7 @@
 
 .biography-section .biography-section__wrapper {
     width: 81.6%;
-    height: 840px;
+    min-height: 840px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -54,7 +54,7 @@
 }
 
 .biography-section__text ul {
-    margin-bottom: 65px;
+    margin-bottom: 45px;
 }
 
 .biography-section__text ul li {
