--- a/styles/heroSection.css
+++ b/styles/heroSection.css
@@ -2,13 +2,14 @@
     margin: 0 auto;
     width: 100%;
     min-width: 320px;
+    height: 630px;
     margin-bottom: 135px;
 }
 
 .hero-section .hero-section__wrapper {
     position: relative;
-    max-width: 73.96%;
-    min-height: 630px;
+    max-width: 1065px;
+    height: 100%;
     margin: 0 auto;
 }
 
@@ -26,7 +27,7 @@
 
 .hero-section .hero-section__img {
     width: 100%;
-    min-height: 630px;
+    height: 100%;
 }
 
 .hero-section h1 {
