--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-
-/* Navigation */
-@import './nav.css';
-
-/* Hero Section */
-@import './heroSection.css';
-
-/* Biography Section */
-@import './biographySection.css';
-
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: normal;
@@ -17,24 +5,158 @@ body {
     line-height: 1.2;
 }
 
-h1, h2 {
+h1 {
     font-family: 'Playfair', serif;
     font-weight: 500;
     font-size: 5.4rem;
 }
 
-h3 {
+/* h3 {
     text-transform: uppercase;
-}
+} */
 
 p {
     font-family: 'Bitter-Regular';
-}
-
-p {
     font-size: 2rem;
 }
 
-.section-five ul {
+/* .section-five ul {
     font-size: 2.4rem;
+} */
+
+/* Navigation --start */
+nav {
+    width: 100%;
+    padding: 60px 0;
+    text-align: center;
 }
+
+.nav__menu-btn {
+    cursor: pointer;
+    border: none;
+    background: none;
+}
+/* Navigation --end */
+
+/* Hero Section --start */
+.hero {
+    margin: 0 auto;
+    width: 100%;
+    min-width: 320px;
+    margin-bottom: 135px;
+}
+
+.hero__wrapper {
+    position: relative;
+    width: 73.96%;
+    max-width: 1065px;
+    min-height: 630px;
+    margin: 0 auto;
+}
+
+.hero__img {
+    background-image: url('/assets/img/inside-weather-Uxqlfigh6oE-unsplash 1.jpg');
+    background-position: start;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.hero__title {
+    position: absolute;
+    background-color: #fff;
+    padding: 10.72% 0; /**  */
+    width: 56%;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.hero__img {
+    width: 100%;
+    min-height: 630px;
+}
+
+.hero__title-main {
+    margin-bottom: 14px;
+}
+
+.hero__title-sub {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+}
+/* Hero Section --end */
+
+/* Biography Section --start */
+.biography {
+    width: 100%;
+    min-width: 320px;
+    margin-bottom: 135px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.biography__wrapper {
+    width: 81.6%;
+    max-width: 1175px;
+    min-height: 840px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.biography__img {
+    width: 47.06%;
+    align-self: stretch;
+    min-height: 400px;
+}
+
+.biography__title {
+    position: relative;
+    top: 33.8px;
+    margin-right: 44px;
+    font-weight: 700;
+    font-size: 1.25rem;
+    transform: rotate(-90deg);
+    align-self: flex-start;
+}
+
+.biography__text {
+    align-self: center;
+    flex-basis: 40.44%;
+}
+
+.biography__text-title {
+    font-family: 'Playfair', serif;
+    font-size: 5.38rem;
+    font-weight: 500;
+    margin-bottom: 25px;
+}
+
+.biography__text-list {
+    margin-bottom: 45px;
+}
+
+.biography__text-list_item {
+    font-size: 1.13rem;
+    font-weight: 500;
+    display: inline-block;
+}
+
+.biography__text-list_item:not(.biography__text-list_item:first-child, .biography__text-list_item:last-child):after {
+    content: '\00A0\00A0\002F';
+}
+
+.biography__text-paragraph {
+    color: #0d0d0d;
+}
+
+.biography__text-paragraph:before {
+    content: '\2013';
+    display: block;
+    color: #0d0d0d;
+}
+/* Biography Section --end */
