--- a/styles/main.css
+++ b/styles/main.css
@@ -157,3 +157,60 @@ nav {
     color: #0d0d0d;
 }
 /* Biography Section --end */
+
+/* Designers Section --start */
+.designers {
+    margin-bottom: 134px;
+}
+/* Designers Section --start */
+
+/* Testimonials Section --start */
+.testimonials {
+    width: 81.8%;
+    max-width: 1440px;
+    margin: 0 auto 134px;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: 34px repeat(2, auto);
+    grid-template-rows: repeat(4, auto);
+}
+
+.testimonials__title {
+    grid-row: 1;
+    grid-column: 1/4;
+}
+
+.testimonials__img {
+    grid-column: 2;
+    grid-row: 2/5;
+    width: 100%;
+}
+
+.testimonials__link {
+    width: fit-content;
+    transform: rotate(-90deg);
+    grid-column: 1;
+    align-self: center;
+    justify-self: center;
+}
+
+.testimonials__paragraph {
+    text-align: center;
+    width: 221px;
+    align-self: center;
+    justify-self: center;
+    grid-column: 3;
+    grid-row: 2/5;
+}
+
+.testimonials__paragraph-text {
+    margin-bottom: 42px;
+}
+
+.testimonials__link-a {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
+}
+/* Testimonials Section --end */
