--- a/styles/main.css
+++ b/styles/main.css
@@ -93,7 +93,7 @@ nav {
 .biography {
     width: 100%;
     min-width: 320px;
-    margin-bottom: 135px;
+    margin-bottom: 169px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -160,7 +160,53 @@ nav {
 
 /* Designers Section --start */
 .designers {
-    margin-bottom: 134px;
+    margin-bottom: 258px;
+}
+
+.designers__wrapper {
+    max-width: 1440px;
+    width: 94.84%;
+    min-width: 1337px;
+    overflow: auto;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.designers__title {
+    transform: rotate(-90deg);
+    width: fit-content;
+    height: fit-content;
+    grid-row: 1;
+    grid-column: 3/5;
+    align-self: end;
+    justify-self: center;
+}
+
+.designers__card {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end;
+    margin-left: 31px;
+}
+
+.designers__card-main {
+    grid-column: 1/3;
+    grid-row: 1/3;
+}
+
+.designers__card-main .designers__card-description {
+    transform: translateX(50%);
+}
+
+.designers__card-photo {
+    width: 100%;
+    margin-bottom: 24px;
+}
+
+.designers__card-title {
+    font-size: 1rem;
+    text-transform: uppercase;
 }
 /* Designers Section --start */
 
