--- a/styles/main.css
+++ b/styles/main.css
@@ -161,6 +161,7 @@ nav {
 /* Designers Section --start */
 .designers {
     margin-bottom: 258px;
+    padding-left: 30px;
 }
 
 .designers__wrapper {
@@ -170,13 +171,14 @@ nav {
     overflow: auto;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    grid-template-columns: repeat(4, calc((100% - 90px) / 4));
+    grid-auto-columns: calc((100% - 90px) / 4);
 }
 
 .designers__title {
-    transform: rotate(-90deg);
-    width: fit-content;
-    height: fit-content;
+    transform: rotate(-90deg) translate(-112px, -6px);
+    display: inline-block;
     grid-row: 1;
     grid-column: 3/5;
     align-self: end;
@@ -184,15 +186,14 @@ nav {
 }
 
 .designers__card {
+    grid-row: 2;
     display: flex;
     flex-direction: column;
     align-self: flex-end;
-    margin-left: 31px;
 }
 
 .designers__card-main {
-    grid-column: 1/3;
-    grid-row: 1/3;
+    grid-column: span 2;
 }
 
 .designers__card-main .designers__card-description {
