--- a/styles/main.css
+++ b/styles/main.css
@@ -171,7 +171,7 @@ nav {
     margin: 0 auto 134px;
     display: grid;
     gap: 30px;
-    grid-template-columns: 34px repeat(2, auto);
+    grid-template-columns: 34px 43.68% auto;
     grid-template-rows: repeat(4, auto);
 }
 
