--- a/styles/main.css
+++ b/styles/main.css
@@ -282,12 +282,7 @@ nav {
     left: 328px;
 }
 
-.strong-points__img {
-    flex-basis: 351px;
-}
-
 .strong-points__list-wrapper {
-    flex-basis: 395px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -300,12 +295,30 @@ nav {
     margin-bottom: 28px;
 }
 
-.strong-points__list {
-    flex-basis: 395px;
-}
-
 .strong-points__list-item {
     font-family: 'Bitter-Regular';
     font-size: 2.12rem;
+}
+
+@supports not (display: grid) {
+    .strong-points {
+        position: relative;
+        padding: 44px 0;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .strong-points__title {
+        position: absolute;
+        top: 48px;
+    }
+
+    .strong-points__img {
+        flex-basis: 351px;
+    }
+
+    .strong-points__list-wrapper {
+        flex-basis: 395px;
+    }
 }
 /* Strong Points Section --end */
