--- a/styles/main.css
+++ b/styles/main.css
@@ -133,8 +133,19 @@ nav {
 
 .hero__title-sub {
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
     font-weight: 500;
+}
+
+@media (max-width: 550px) {
+    .hero__title-sub {
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 551px) {
+    .hero__title-sub {
+        font-size: 20px;
+    }
 }
 /* Hero Section --end */
 
@@ -142,68 +153,183 @@ nav {
 .biography {
     width: 100%;
     min-width: 320px;
-    margin-bottom: 169px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+@media (max-width: 550px) {
+    .biography {
+        margin-bottom: 80px;
+    }
+}
+
+@media (min-width: 551px) {
+    .biography {
+        margin-bottom: 169px;
+    }
+}
+
 .biography__wrapper {
-    width: 81.6%;
     max-width: 1175px;
     display: flex;
     align-items: flex-start;
 }
 
+@media (max-width: 550px) {
+    .biography__wrapper {
+        position: relative;
+        flex-direction: column-reverse;
+        width: 100%;
+    }
+}
+
+@media (min-width: 551px) {
+    .biography__wrapper {
+        width: 81.6%;
+    }
+}
+
 .biography__img {
-    width: 47.06%;
     min-height: 400px;
 }
 
+@media (max-width: 550px) {
+    .biography__img {
+        width: 100%;
+    }
+}
+
+@media (min-width: 551px) {
+    .biography__img {
+        width: 47.06%;
+    }
+}
+
 .biography__title {
-    position: relative;
-    top: 33.8px;
-    margin-right: 44px;
     font-weight: 700;
     font-size: 1.25rem;
-    transform: rotate(-90deg);
     align-self: flex-start;
 }
 
-.biography__text {
-    align-self: center;
-    flex-basis: 40.44%;
+@media (max-width: 550px) {
+    .biography__title {
+        position: absolute;
+        top: 0;
+        right: 18px;
+    }
+}
+
+@media (min-width: 551px) {
+    .biography__title {
+        position: relative;
+        top: 33.8px;
+        margin-right: 44px;
+        transform: rotate(-90deg);
+    }
+}
+
+@media (max-width: 550px) {
+    .biography__text {
+        display: flex;
+        flex-direction: column;
+        padding: 0 18px;
+    }
+}
+
+@media (min-width: 551px) {
+    .biography__text {
+        flex-basis: 40.44%;
+        align-self: center;
+    }
 }
 
 .biography__text-title {
     font-family: 'Playfair', serif;
-    font-size: 5.38rem;
-    font-weight: 500;
-    margin-bottom: 25px;
 }
 
-.biography__text-list {
-    margin-bottom: 45px;
+@media (max-width: 550px) {
+    .biography__text-title {
+        order: 1;
+        font-weight: 400;
+        font-size: 4rem;
+        margin-bottom: 36px;
+    }
+
+    .biography__text-title br { display: none; }
+    .biography__text-title::before {
+        content: '-';
+    }
+}
+
+@media (min-width: 551px) {
+    .biography__text-title {
+        font-weight: 500;
+        font-size: 5.38rem;
+        margin-bottom: 25px;
+    }
+}
+
+@media (max-width: 550px) {
+    .biography__text-list {
+        margin-bottom: 57px;
+    }
+
+    .biography__text-list br {
+        display: none;
+    }
+}
+
+@media (min-width: 551px) {
+    .biography__text-list {
+        margin-bottom: 45px;
+    }
 }
 
 .biography__text-list_item {
     font-size: 1.13rem;
     font-weight: 500;
-    display: inline-block;
 }
 
-.biography__text-list_item:not(.biography__text-list_item:first-child, .biography__text-list_item:last-child):after {
-    content: '\00A0\00A0\002F';
+@media (max-width: 550px) {
+    .biography__text-list_item::before {
+        content: '-';
+    }
+}
+
+@media (min-width: 551px) {
+    .biography__text-list_item {
+        display: inline-block;
+    }
+
+    .biography__text-list_item:not(.biography__text-list_item:first-child, .biography__text-list_item:last-child):after {
+        content: '\00A0\00A0\002F';
+    }
 }
 
 .biography__text-paragraph {
     color: #0d0d0d;
 }
 
-.biography__text-paragraph:before {
-    content: '\2013';
-    display: block;
-    color: #0d0d0d;
+@media (max-width: 550px) {
+    .biography__text-paragraph {
+        font-family: 'Bitter-Thin';
+        font-size: 1.875rem;
+        margin-bottom: 41px;
+    }
+}
+
+@media (min-width: 551px) {
+    .biography__text-paragraph {
+        font-size: 1.625rem;
+    }
+
+    
+    .biography__text-paragraph:before {
+        content: '\2013';
+        display: block;
+        color: #0d0d0d;
+    }
 }
 /* Biography Section --end */
 
