--- a/styles/reset.css
+++ b/styles/reset.css
@@ -5,6 +5,10 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
 }
 
 ul {
