--- a/styles/main.css
+++ b/styles/main.css
@@ -502,43 +502,121 @@ nav {
     max-width: 1440px;
     width: 100%;
     margin: 0 auto;
-    margin-bottom: 162px;
     overflow: auto;
     display: grid;
     gap: 30px;
-    align-items: flex-end;
-    grid-template-columns: repeat(2, 351px) 395px 351px;
     grid-template-rows: repeat(2, auto);
 }
 
+@media (max-width: 550px) {
+    .strong-points {
+        position: relative;
+        margin-bottom: 74px;
+        padding-top: 118px;
+        align-items: flex-start;
+        grid-template-columns: 196px repeat(3, 300px);
+    }
+}
+
+@media (min-width: 551px) {
+    .strong-points {
+        margin-bottom: 80px;
+        align-items: flex-end;
+        grid-template-columns: repeat(2, 351px) 395px 351px;
+    }
+}
+
 .strong-points__title {
-    font-size: 1.25rem;
     font-weight: 700;
     grid-row: 1;
-    grid-column: 1/5;
-    transform: rotate(-90deg);
-    width: fit-content;
-    position: relative;
-    top: 62px;
-    left: 328px;
+}
+
+@media (max-width: 550px) {
+    .strong-points__title {
+        grid-column: 1;
+        position: absolute;
+        top: -120px;
+        right: 20px;
+        font-size: 1.125rem;
+    }
+}
+
+@media (min-width: 551px) {
+    .strong-points__title {
+        transform: rotate(-90deg);
+        width: fit-content;
+        position: relative;
+        top: 62px;
+        left: 328px;
+        grid-column: 1/5;
+        font-size: 1.25rem;
+    }
+}
+
+@media (max-width: 550px) {
+    .strong-points__img {
+        height: 450px;
+    }
 }
 
 .strong-points__list-wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
+}
+
+@media (max-width: 550px) {
+    .strong-points__list-wrapper {
+        order: -1;
+    }
+}
+
+@media (min-width: 551px) {
+    .strong-points__list-wrapper {
+        align-items: center;
+    }
 }
 
 .strong-points__list-title {
     font-family: 'Playfair', serif;
-    font-weight: 500;
-    font-size: 5.4rem;
-    margin-bottom: 28px;
 }
 
-.strong-points__list-item {
-    font-family: 'Bitter-Regular';
-    font-size: 2.12rem;
+@media (max-width: 550px) {
+    .strong-points__list-title {
+        font-size: 4rem;
+        font-weight: 400;
+        margin-bottom: 14px;
+        position: absolute;
+        top: 36px;
+    }
+}
+
+@media (min-width: 551px) {
+    .strong-points__list-title {
+        font-weight: 500;
+        font-size: 5.4rem;
+        margin-bottom: 28px;
+    }
+}
+
+@media (max-width: 550px) {
+    .strong-points__list-item {
+        font-family: 'Bitter-Light';
+        font-size: 1.5rem;
+        line-height: 1.5;
+    }
+}
+
+@media (min-width: 551px) {
+    .strong-points__list-item {
+        font-family: 'Bitter-Regular';
+        font-size: 2.12rem;
+    }
+}
+
+@media (max-width: 550px) {
+    .strong-points__list {
+        align-self: center;
+    }
 }
 
 @supports not (display: grid) {
