--- a/styles/main.css
+++ b/styles/main.css
@@ -447,46 +447,127 @@ nav {
 
 /* Testimonials Section --start */
 .testimonials {
-    width: 81.8%;
+    min-width: 320px;
     max-width: 1440px;
-    margin: 0 auto 134px;
     display: grid;
     gap: 30px;
-    grid-template-columns: 34px 43.68% auto;
-    grid-template-rows: repeat(4, auto);
+}
+
+@media (max-width: 550px) {
+    .testimonials {
+        width: calc(100% - 36px);
+        margin: 0 auto 80px;
+    }
+}
+
+@media (min-width: 551px) {
+    .testimonials {
+        width: 81.8%;
+        margin: 0 auto 134px;
+        grid-template-columns: 34px 43.68% auto;
+        grid-template-rows: repeat(4, auto);
+    }
 }
 
 .testimonials__title {
-    font-size: 1.24rem;
     grid-row: 1;
-    grid-column: 1/4;
 }
 
-.testimonials__img {
-    grid-column: 2;
-    grid-row: 2/5;
-    width: 100%;
+@media (max-width: 550px) {
+    .testimonials__title {
+        font-size: 1.125rem;
+        justify-self: end;
+        grid-column: 1/3;
+    }
 }
 
-.testimonials__link {
-    width: fit-content;
-    transform: rotate(-90deg);
-    grid-column: 1;
-    align-self: center;
-    justify-self: center;
+@media (min-width: 551px) {
+    .testimonials__title {
+        font-size: 1.24rem;
+        grid-column: 1/4;
+    }
+}
+
+@media (max-width: 550px) {
+    .testimonials__img {
+        display: none;
+    }
+}
+
+@media (min-width: 551px) {
+    .testimonials__img {
+        grid-column: 2;
+        grid-row: 2/5;
+        width: 100%;
+    }
+}
+
+@media (max-width: 550px) {
+    .testimonials__link {
+        order: 1;
+    }
+
+    .testimonials__link:nth-child(even) {
+        grid-column: 1;
+    }
+
+    .testimonials__link:nth-child(odd) {
+        grid-column: 2;
+    }
+}
+
+@media (min-width: 551px) {
+    .testimonials__link {
+        align-self: center;
+        justify-self: center;
+        width: fit-content;
+        transform: rotate(-90deg);
+        grid-column: 1;
+    }
 }
 
 .testimonials__paragraph {
     text-align: center;
-    width: 221px;
     align-self: center;
     justify-self: center;
-    grid-column: 3;
-    grid-row: 2/5;
+    
 }
 
-.testimonials__paragraph-text {
-    margin-bottom: 42px;
+@media (max-width: 550px) {
+    .testimonials__paragraph {
+        grid-column: 1/3;
+    }
+}
+
+@media (min-width: 551px) {
+    .testimonials__paragraph {
+        width: 221px;
+        grid-column: 3;
+        grid-row: 2/5;
+    }
+}
+
+@media (max-width: 550px) {
+    .testimonials__paragraph-text {
+        font-family: 'Bitter-Light';
+        font-size: 1.875rem;
+        margin: 0 auto 24px;
+        width: 92%;
+        align-self: center;
+    }
+}
+
+@media (min-width: 551px) {
+    .testimonials__paragraph-text {
+        font-size: 2rem;
+        margin-bottom: 42px;
+    }
+}
+
+@media (max-width: 550px) {
+    .testimonials__paragraph-img {
+        width: 100%;
+    }
 }
 
 .testimonials__link-a {
@@ -499,6 +580,7 @@ nav {
 
 /* Strong Points Section --start */
 .strong-points {
+    min-width: 320px;
     max-width: 1440px;
     width: 100%;
     margin: 0 auto;
