--- a/styles/main.css
+++ b/styles/main.css
@@ -25,14 +25,49 @@ nav {
 
 @media (max-width: 550px) {
     nav {
+        position: fixed;
+        bottom: 0;
+        background-color: #ffffff;
+        z-index: 99;
+        border-top: 1px solid #000000;
+        padding: 16px 0;
+    }
+}
+
+@media (max-width: 550px) {
+    .nav__menu-btn {
         display: none;
     }
 }
 
-.nav__menu-btn {
-    cursor: pointer;
-    border: none;
-    background: none;
+@media (min-width: 551px) {
+    .nav__menu-btn {
+        cursor: pointer;
+        border: none;
+        background: none;
+    }
+}
+
+@media (max-width: 550px) {
+    .nav__list {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .nav__list a {
+        text-transform: uppercase;
+        text-decoration: none;
+        color: inherit;
+        font-size: 2.5rem;
+        font-family: 'Bitter';
+    }
+}
+
+@media (min-width: 551px) {
+    .nav__list {
+        display: none;
+    }
 }
 /* Navigation --end */
 
@@ -549,7 +584,7 @@ nav {
 
 @media (max-width: 550px) {
     .testimonials__paragraph-text {
-        font-family: 'Bitter-Light';
+        font-family: 'Bitter';
         font-size: 1.875rem;
         margin: 0 auto 24px;
         width: 92%;
@@ -593,7 +628,7 @@ nav {
 @media (max-width: 550px) {
     .strong-points {
         position: relative;
-        margin-bottom: 74px;
+        margin-bottom: calc(74px + 81px); /** +Bottom nav. */
         padding-top: 118px;
         align-items: flex-start;
         grid-template-columns: 196px repeat(3, 300px);
