--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,5 @@
+html { scroll-behavior: smooth; }
+
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: normal;
@@ -21,16 +23,23 @@ nav {
     width: 100%;
     padding: 60px 0;
     text-align: center;
+    background: #ffffff;
+    z-index: 99;
 }
 
 @media (max-width: 550px) {
     nav {
         position: fixed;
         bottom: 0;
-        background-color: #ffffff;
-        z-index: 99;
         border-top: 1px solid #000000;
         padding: 16px 0;
+    }
+}
+
+@media (min-width: 551px) {
+    nav {
+        position: sticky;
+        top: 0;
     }
 }
 
