--- a/styles/main.css
+++ b/styles/main.css
@@ -12,15 +12,45 @@ body::-webkit-scrollbar-track {
     background: transparent;
 }
 
-h1 {
-    font-family: 'Playfair', serif;
-    font-weight: 500;
-    font-size: 5.4rem;
-}
-
 p {
     font-family: 'Bitter-Regular';
     font-size: 2rem;
+}
+
+/** BEM */
+.title-big {
+    font-family: 'Playfair', serif;
+}
+
+@media (max-width: 550px) {
+    .title-big {
+        font-weight: 400;
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 551px) {
+    .title-big {
+        font-weight: 500;
+        font-size: 5.4rem;
+    }
+}
+
+.title-small {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+}
+
+@media (max-width: 550px) {
+    .title-small {
+        font-size: 1.125rem;
+    }
+}
+
+@media (min-width: 551px) {
+    .title-small {
+        font-size: 1.25rem;
+    }
 }
 
 /* Navigation --start */
@@ -141,25 +171,25 @@ nav {
 
 .hero__img {
     background-image: url('/assets/img/inside-weather.jpg');
-    background-position: start;
+    background-position: left;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.hero__title {
+.hero__title-wrapper {
     background-color: #fff;
     text-align: center;
 }
 
 @media (max-width: 550px) {
-    .hero__title {
+    .hero__title-wrapper {
         padding: 28.77% 0;
         width: 100%;
     }
 }
 
 @media (min-width: 551px) {
-    .hero__title {
+    .hero__title-wrapper {
         position: absolute;
         padding: 10.72% 0;
         width: 56%;
@@ -186,32 +216,19 @@ nav {
     }
 }
 
-.hero__title-main {
+.hero__title {
     margin-bottom: 14px;
 }
 
 @media (max-width: 550px) {
-    .hero__title-main {
+    .hero__title-big {
         font-weight: 400;
-        font-size: 70px;
+        font-size: 4.4rem;
     }
 }
 
-.hero__title-sub {
-    font-family: 'Roboto', sans-serif;
+.hero__title-small {
     font-weight: 500;
-}
-
-@media (max-width: 550px) {
-    .hero__title-sub {
-        font-size: 18px;
-    }
-}
-
-@media (min-width: 551px) {
-    .hero__title-sub {
-        font-size: 20px;
-    }
 }
 /* Hero Section --end */
 
@@ -273,7 +290,6 @@ nav {
 }
 
 .biography__title {
-    font-weight: 700;
     align-self: flex-start;
 }
 
@@ -282,7 +298,6 @@ nav {
         position: absolute;
         top: 0;
         right: 18px;
-        font-size: 1.125rem;
     }
 }
 
@@ -290,7 +305,6 @@ nav {
     .biography__title {
         position: relative;
         top: 33.8px;
-        font-size: 1.25rem;
         margin-right: 44px;
         transform: rotate(-90deg);
     }
@@ -311,15 +325,9 @@ nav {
     }
 }
 
-.biography__text-title {
-    font-family: 'Playfair', serif;
-}
-
 @media (max-width: 550px) {
     .biography__text-title {
         order: 1;
-        font-weight: 400;
-        font-size: 4rem;
         margin-bottom: 36px;
     }
 
@@ -331,8 +339,6 @@ nav {
 
 @media (min-width: 551px) {
     .biography__text-title {
-        font-weight: 500;
-        font-size: 5.38rem;
         margin-bottom: 25px;
     }
 }
@@ -458,7 +464,6 @@ nav {
 
 @media (max-width: 550px) {
     .designers__title {
-        font-size: 1.125rem;
         margin-left: 18px;
     }
 }
@@ -543,7 +548,6 @@ nav {
 
 @media (max-width: 550px) {
     .testimonials__title {
-        font-size: 1.125rem;
         justify-self: end;
         grid-column: 1/3;
     }
@@ -551,7 +555,6 @@ nav {
 
 @media (min-width: 551px) {
     .testimonials__title {
-        font-size: 1.24rem;
         grid-column: 1/4;
     }
 }
@@ -681,7 +684,6 @@ nav {
 }
 
 .strong-points__title {
-    font-weight: 700;
     grid-row: 1;
 }
 
@@ -691,7 +693,6 @@ nav {
         position: absolute;
         top: -120px;
         right: 20px;
-        font-size: 1.125rem;
     }
 }
 
@@ -703,7 +704,6 @@ nav {
         top: 62px;
         left: 328px;
         grid-column: 1/5;
-        font-size: 1.25rem;
     }
 }
 
@@ -740,14 +740,8 @@ nav {
     }
 }
 
-.strong-points__list-title {
-    font-family: 'Playfair', serif;
-}
-
 @media (max-width: 550px) {
     .strong-points__list-title {
-        font-size: 4rem;
-        font-weight: 400;
         margin-bottom: 14px;
         position: absolute;
         top: 36px;
@@ -756,8 +750,6 @@ nav {
 
 @media (min-width: 551px) {
     .strong-points__list-title {
-        font-weight: 500;
-        font-size: 5.4rem;
         margin-bottom: 28px;
     }
 }
