Set webpack configs.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -170,7 +170,7 @@ nav {
 }
 
 .hero__img {
-    background-image: url('/assets/img/inside-weather.jpg');
+    background-image: url('../assets/img/inside-weather.jpg');
     background-position: left;
     background-repeat: no-repeat;
     background-size: cover;
