Set font-display: swap.

--- a/src/sass/fonts.sass
+++ b/src/sass/fonts.sass
@@ -4,6 +4,7 @@
     src: url('../assets/fonts/bitter/Bitter-Thin.woff')
     src: url('../assets/fonts/bitter/Bitter-Thin.eot')
     src: url('../assets/fonts/bitter/Bitter-Thin.ttf')
+    font-display: swap
 
 @font-face
     font-family: 'Bitter-Light'
@@ -11,6 +12,7 @@
     src: url('../assets/fonts/bitter/Bitter-Light.woff')
     src: url('../assets/fonts/bitter/Bitter-Light.eot')
     src: url('../assets/fonts/bitter/Bitter-Light.ttf')
+    font-display: swap
 
 @font-face
     font-family: 'Bitter-Regular'
@@ -18,9 +20,11 @@
     src: url('../assets/fonts/bitter/Bitter-Regular.woff')
     src: url('../assets/fonts/bitter/Bitter-Regular.eot')
     src: url('../assets/fonts/bitter/Bitter-Regular.ttf')
+    font-display: swap
 
 @font-face
     font-family: 'Butler'
     src: url('../assets/fonts/butler/Butler.woff2')
     src: url('../assets/fonts/butler/Butler.woff')
     src: url('../assets/fonts/butler/Butler.ttf')
+    font-display: swap
