Support; +Google Analytics.

--- a/src/sass/hero.sass
+++ b/src/sass/hero.sass
@@ -25,7 +25,7 @@
         width: 73.96%
 
 .hero__img
-    background-image: url('../assets/img/inside-weather.jpg')
+    background-image: url('../assets/img/inside-weather.webp')
     background-position: left
     background-repeat: no-repeat
     background-size: cover
